#pragma once

#include <memory>

// Forward declarations of domain models
class LedStrips;
class Lcd2004;
class Tm1637;
class IoPins;

class DomainModelsContext
{
public:
    DomainModelsContext();
    ~DomainModelsContext();

    void Set(
        std::unique_ptr<Lcd2004> lcd2004,
        std::unique_ptr<Tm1637> tm1637CentralPanel,
        std::unique_ptr<Tm1637> tm1637Player1,
        std::unique_ptr<Tm1637> tm1637Player2,
        std::unique_ptr<IoPins> ioPins,
        std::unique_ptr<LedStrips> ledStrips
    );

    Lcd2004& GetLcd2004();
    Tm1637& GetTm1637CentralPanel();
    Tm1637& GetTm1637Player1();
    Tm1637& GetTm1637Player2();
    IoPins& GetIoPins();
    LedStrips& GetLedStrips();

private:
    std::unique_ptr<Lcd2004> _lcd2004;
    std::unique_ptr<Tm1637> _tm1637CentralPanel;
    std::unique_ptr<Tm1637> _tm1637Player1;
    std::unique_ptr<Tm1637> _tm1637Player2;
    std::unique_ptr<IoPins> _ioPins;
    std::unique_ptr<LedStrips> _ledStrips;
};
