@startuml

title M10 COMPOSITION LAYER

skinparam packageStyle rectangle
skinparam lineThickness 2

package "Builder" as Builder_Package
{
    class Builder
    {
        + Builder(Context& context)
        + GetContext() : Context&
        + Build()
        # <<abstract>> BuildDeviceDriversContext()
        # <<abstract>> BuildServicesContext() 
        - BuildDomainModelsContext()
        - BuildDeviceModelsContext()
        - BuildTasks()
        - BuildQueues()
    }

    class EspBuilder
    {
        + EspBuidler(Context& context)
        # BuildDeviceDriversContext()
        # BuildServicesContext() 
    }
    EspBuilder -u-|> Builder

    class WindowsBuilder
    {
        # BuildDeviceDriversContext(Context& context)
        # BuildServicesContext(Context& context) 
    }
    WindowsBuilder -u-|> Builder
}

package "Context" as ContextPackage
{
    class Context 
    {
        + Context()
        + DomainModelsContext& GetDomainModels()
        + DeviceModelsContext& GetDeviceModels()
        + DeviceDriversContext& GetDeviceDrivers() 
        + ServicesContext& GetServices() 
        + TasksContext& GetTasks()
        + QueuesContext& GetQueues()
    }

    class DomainModelsContext
    {
        + DomainsModelsContext()
        + Set(\n Displays displays, \n IoPins ioPins, \n LedStrips ledStrips)
        + GetLedStrips() : LedStrips& 
        + GetIoPins() : IoPins& 
        + GetDisplays() : Displays& 

        - LedStrips _ledStrips
        - IoPins _ioPins
        - Lcd2004 _lcd2004
        - Tm1637 _tm1637CentralPanel
        - Tm1637 _tm1637Player1
        - Tm1637 _tm1637Player2
    }

    class DeviceModelsContext
    {
        + DeviceModelsContext()
        + Set(\n Ws28xxModel ws28xxModel,\nI2cModel i2cModel,\nMcp23017Model mcp23017Model,\nLcd2004Model lcd2004Model,
            Tm1637Model tm1637ModelCentralPanel,\nTm1637Model tm1637ModelPlayer1,\nTm1637Model tm1637ModelPlayer2)
        + GetLedStripModel() : Ws28xxModel& 
        + GetMcp23017Model() : Mcp23017Model& 
        + GetLcd2004Model() : Lcd2004Model& 
        + GetTm1637ModelCentralPanel() : Tm1637Model& 
        + GetTm1637ModelPlayer1() : Tm1637Model& 
        + GetTm1637ModelPlayer2() : Tm1637Model& 
        - I2cModel _i2cModel
        - Ws28xxModel _ws28xxModel
        - Mcp23017Model _mcp23017Model
        - Lcd2004Model _lcd2004Model
        - Tm1637Model _tm1637ModelCentralPanel
        - Tm1637Model _tm1637ModelPlayer1
        - Tm1637Model _tm1637ModelPlayer2
    }
    
    class DeviceDriversContext
    {
        + DeviceDriversContext()
        + Set(\nWs28xxDriver> ws28xxDriver,\nI2cDriver i2cDriver,\nMcp23017Driver mcpDriver,\nLcd2004Driver lcd2004Driver,
            Tm1637Driver tm1637DriverCentralPanel,\nTm1637Driver tm1637DriverPlayer1,\nTm1637Driver tm1637DriverPlayer2)
        + GetI2cDriver() : I2cDriver& 
        + GetLcd2004Driver() : Lcd2004Driver& 
        + GetMcp23017Driver() : Mcp23017Driver& 
        + GetTm1637CentralPanel() : Tm1637Driver& 
        + GetTm1637Player1() : Tm1637Driver& 
        + GetTm1637Player2() : Tm1637Driver& 
        + GetTm1637DeviceDriverId(
            Types::ETm1637Id tm1637id): Tm1637DeviceDriver&
        + GetWs28xxDriver() : Ws28xxDriver& 
        - I2cDriver _i2cDriver
        - Lcd2004Driver _lcd2004Driver
        - Mcp23017Driver _mcp23017Driver
        - Tm1637Driver _tm1637DriverCentralPanel
        - Tm1637Driver _tm1637DriverPlayer1
        - Tm1637Driver _tm1637DriverPlayer2
        - Ws28xxDriver _ws28xxDriver
    }

    class ServicesContext
    {
        + ServicesContext()
        + Set(Rtos rtos, RtosQueue queue, Random random)
        + GetRtos() : Rtos& 
        + GetQueue() : RtosQueue& 
        + GetRandom() : Random& 
        - _rtos : Rtos 
        - _queue : RtosQueue 
        - _random : Random 
    }

    class TasksContext
    {
        + TasksContext()
        + Set(RtosTask applicationsTask, 
            RtosTask i2cTask, RtosTask ledStripsTask)
        + GetApplicationsTask() : RtosTask& 
        + GetI2cTask() : RtosTask& 
        + GetLedStripsTask(): RtosTask& 
        - RtosTask _applicationsTask
        - RtosTask _i2cTask
        - RtosTask _ledStripsTask
    }

    class QueuesContext
    {
        + QueuesContext()
        + Set(RtosQueue ledStripsQueue, 
            RtosQueue i2cInputQueue, RtosQueue i2cOutputQueue)
        + GetLedStripsQueue(): RtosQueue& 
        + GetI2cInputQueue(): RtosQueue& 
        + GetI2cOutputQueue() : RtosQueue& 
        - RtosQueue _ledStripsQueue;
        - RtosQueue _inputQueue;
        - RtosQueue _outputQueue;
    }

    Context *-- DomainModelsContext
    Context *-- DeviceModelsContext
    Context *-- DeviceDriversContext
    Context *-- ServicesContext
    Context *--- TasksContext
    Context *--- QueuesContext
}

Builder o-- Context
EspBuilder ..-> Context : fills
WindowsBuilder ..-> Context : fills

@enduml
